<resources>
    <string name="app_name">Smarty VPN</string>
    <string name="vpn_on">VPN ON</string>
    <string name="vpn_off">VPN OFF</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="not_connect">Not Connected</string>

    <!--Admob Ids -->
    <string name="ad_id">ca-app-pub-7621524403199169~4907450544</string>
    <string name="banner_ad">ca-app-pub-7621524403199169/4379013101</string>
    <string name="interstitial_ad">ca-app-pub-7621524403199169/3594368873</string>
    <string name="admob_openads_id">ca-app-pub-3940256099942544/3419835294</string>

    <!-- change App version -->
    <string name="current_app_version">Version 1.0</string>
    <!-- End change App version -->
    <string name="about_app_text" translatable="false">You are using Smarty VPN build v1.0.0, Enjoy unlimited bandwidth with stable connection and a lot of servers to choose from. No limits, No restrictions</string>


    <string name="Aboutus_page_Text">Smarty VPN and Security unblock Proxy is world best supervpn app its Super Secure VPN Unlimited Proxy Server for lifetime free access. Unlock any websites save your device Secure VPN is the most trusted security, privacy and access platform with top performance on speed, stability and security to unblock sites, unblock any apps or websites, access social networks, watch videos and movies, protect Wi-Fi hotspot security and protect privacy</string>

    <string name="go_premium_text">Go to Premium</string>
    <string name="upload_text">UPLOAD</string>
    <string name="download_text">DOWNLOAD</string>
    <string name="you_are_connected_text">You are Connected</string>
    <string name="dummy_your_ip_text">Your IP : </string>
    <string name="dummy_ip_text">222.432.00.32</string>
    <string name="dummy_time_text">00:03:32</string>
    <string name="status_text">Status : </string>
    <string name="not_connected_text">Not Connected</string>
    <string name="start_text">Start</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="change_text">Change Server</string>
    <string name="IP_address">Ip Address</string>
    <string name="country_name">Country Name</string>
    <string name="select_server_text">Servers</string>
    <string name="app_version_text">2</string>

    <string name="app_name_premium">Smarty VPN Premium</string>
    <string name="privacy_policy_title" translatable="false">Privacy Policy</string>


    <!-- nav bar titles -->
    <string name="home_title">Home</string>
    <string name="servers_title">Servers</string>
    <string name="pro_title">Get Premium</string>
    <string name="rate_us_title">Rate Us</string>
    <string name="tell_your_friend_title">Tell your friend</string>
    <string name="faq_title">FAQ\'s</string>
    <string name="about_title">About</string>
    <string name="Servers_frag_title">Select Server</string>
    <string name="premium_frag_title">Select Subscription</string>
    <string name="faqs_frag_title">FAQ\'s</string>

    <string name="privacy_policy_error">Invalid link</string>
    <string name="next_text">Next</string>

    <!-- intro Title -->
    <string name="first_slide_title">Stay secure and anonymous</string>
    <string name="first_slide_desp">
    Keep all of your Internet activities
    <br />
    and your identity private.
    </string>
    <string name="second_slide_title">Enjoy unlimited access</string>
    <string name="second_slide_desp">
    Get rid of all the restrictions
    <br />
    and enjoy unblock everything.
    </string>
    <string name="third_slide_title">No limits!</string>
    <string name="third_slide_desp">
    Get access to bunch of VPN servers
    <br />
    and enjoy unlimited bandwidth.
    </string>
    <string name="back_text">Back</string>
    <!-- intro Title -->

    <string name="grant_permission_text">Grant Permissions</string>
    <string name="get_started_text">Get Started</string>

    <!-- share app dialog string -->
    <string name="share_app_title">Choose one</string>
    <string name="share_app_desp">I\'m using this Free VPN App, it\'s provide all servers free https://play.google.com/store/apps/details?id=</string>
    <string name="share_app_subject">Share app</string>
    <!-- share app dialog string -->

    <string name="developers_email" translatable="false">your_developer_email</string>
    <!-- Help to improve us -->
    <string name="developer_email">enoughraju@gmail.com</string>
    <!-- END Help to improve us -->
    <string name="privacy_policy_link" translatable="false">https://sites.google.com/view/smartyvpnprivacypolicy/home</string>

    <string-array name="faq_questions">
        <item>Why I need a VPN?</item>
        <item>Is it safe?</item>
        <item>How to use Smarty VPN?</item>
        <item>How to disconnect Smarty VPN?</item>
        <item>Can\’t connect, not stable or speed is slow.</item>
        <item>How to switch server location?</item>
        <item>Can\’t find the server you want?</item>
        <item>Why can\'t I use Internet after connection established?</item>
        <item>How to disable battery optimization for Smarty VPN?</item>
        <item>How to cancel the subscription in Google play?</item>
        <item>Can I get refund?</item>
    </string-array>

    <string-array name="faq_answers">
        <item>VPN is virtual private network. It allows you to stay private, stay secure, and access any online blocked content you want, no matter where you from.</item>
        <item>We use SSL to encrypt your internet data. Your data is undecipherable to prying eyes while in route. Moreover, we do not collect, log, store, share any data log belonging to users, and please feel safe to use our product.</item>
        <item>Click the \"Start\" button on the middle place of the home page. Then please “Trust this application” if your device asks for this permission.</item>
        <item>Click the same connect button on the home page to disconnect from VPN server.</item>
        <item>Connection problem is affected by many factors, please update to the latest version, refresh the server list and connect to the top server for few times. If it still does not work for you, please contact us via enoughraju@gmail.com and provide us with your country and network provider name.</item>
        <item>Choose the location you want in the server list, then VPN will connect to the location you click.</item>
        <item>Please contact and provide us the detail website address that you want to unblock via enoughraju@gmail.com We will collect your feedback and improve our product.</item>
        <item>First of all, check your network connection. Then make sure you\'ve disable battery optimization for Smarty VPN in android\'s battery settings.</item>
        <item>In most Android devices, Open Settings > Battery > Battery Optimization > Select all apps in drop down menu. Find Smarty VPN and set it "Don\'t optimize".In Huawei devices, Open Setting > Battery > Launch, Find Smarty VPN in the apps list,switch off to "Manage manually", enable "Auto Lunch" and "Run in background". Or you can find battery setting in "Protected Apps".In Samsung devices, Open settings > Battery > App Power Saving > Details, find Smarty VPN in the apps list and disable it.In other devices, you may find it in Setting > Battery > as "Background activity" or "Protected Apps"</item>
        <item>Subscriptions on Google Play renew automatically unless you unsubscribe, if you want to unsubscribe, please open Google Play Store, tap Menu-Subscriptions-Tap thesubscription you want to cancel-Tap Cancel subscription. Check the details here: https://support.google.com/googleplay/answer/2476088</item>
        <item>Not cancelling your subscription before the trial period ends will not be refunded. Check the details here: https://support.google.com/googleplay/answer/2476088</item>
    </string-array>

    <string name="rate_app_text">RATE THIS APP</string>
    <string name="feedback_text">Feedback</string>
    <string name="content_text">Content</string>

    <!-- rating dialog -->
    <string name="rating_dialog_details">How was your experience with us?</string>
    <string name="feedback_email_subject">Smarty VPN App Feedback</string>
    <!--rating dialog-->

    <string name="submit_text">Submit</string>


    <string name="subscription_text">SUBSCRIPTION</string>
    <string name="unlimited_text">Unlimited</string>
    <string name="secure_text">Secure</string>
    <string name="support_text">Support</string>
    <string name="no_ads_text">No Ads</string>


    <string name="one_month_text">1 Month</string>
    <string name="three_months_text">3 Months</string>
    <string name="one_year_text">1 Year</string>

    <string name="country_name_text">Country Name</string>
    <string name="choose_location_text">choose your location</string>
    <string name="default_server_text">Server Default Icon</string>
    <string name="feedback_hint_text">Suggest us what went wrong and we\'ll work on it.</string>
    <string name="speed_text">Speed</string>
    <string name="tcp_text">TCP</string>
    <string name="ping_text">Ping</string>
    <string name="info_dialog_title">Credits</string>
    <string name="info_dialog_details">All of these servers are being provided by the VPN gate project and they are offering their service free of charge. You can read more about the VPN gate project at <a href="https://www.vpngate.net/en/">https://www.vpngate.net/en/</a></string>


</resources>