<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.smartyvpn.tfsmarty.view.slides.SlideThirdFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/third_next_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/intro_image3"
            tools:ignore="ContentDescription" />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/t1"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/third_slide_title"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/t2"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:gravity="center_horizontal"
            android:text="@string/third_slide_desp"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/third_permission_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:background="@drawable/slide_button_backgroud"
        android:text="@string/grant_permission_text"
        android:textSize="@dimen/textSize_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/third_next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/slide_button_backgroud"
        android:text="@string/get_started_text"
        android:textSize="@dimen/textSize_16"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>